--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "../base/normalize";
+@import "../base/base";
 
 //Abstract
 
@@ -10,3 +11,5 @@
 
 @import "../components/header";
 @import "../components/slider";
+@import "../components/services";
+
