--- a/css/main.css
+++ b/css/main.css
@@ -302,12 +302,19 @@ template {
 * {
   box-sizing: border-box; }
 
+body {
+  font-style: inherit; }
+
+body {
+  font-family: 'Lato', Verdana, sans-serif; }
+
 .wrapper {
   max-width: 936px;
   margin: 0 auto; }
 
 .header_colored {
-  background: #2D303A; }
+  background: #2D303A;
+  border-bottom: #323746 6px solid; }
 
 .navigation {
   display: flex;
@@ -340,6 +347,16 @@ template {
 
 .slider {
   background: #F06C64; }
+  .slider__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .slider__arrow:last-child {
+    margin-left: 100px; }
+  .slider__vertical-img {
+    margin-right: 152px;
+    margin-top: 60px;
+    margin-bottom: 82px; }
 
 .vertical-img {
   display: flex;
@@ -350,7 +367,7 @@ template {
   width: 216px;
   height: 458px;
   border-radius: 22px; }
-  .vertical-img__image_transform {
+  .vertical-img_transform {
     transform: rotate(90deg); }
   .vertical-img_shadowed {
     box-shadow: 25px 25px rgba(0, 0, 0, 0.1), 25px 25px rgba(0, 0, 0, 0.1); }
@@ -366,5 +383,58 @@ template {
   .vertical-img__group {
     width: 41.88px;
     height: 41.88px; }
+
+.horizontal-img_shadowed {
+  box-shadow: 25px 25px rgba(0, 0, 0, 0.1), 25px 25px rgba(0, 0, 0, 0.1); }
+
+.services {
+  background: #F2F2F2; }
+
+.services__title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 900;
+  padding: 65px 0 18px;
+  margin: 0;
+  color: #666D89; }
+
+.services__text {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 300;
+  color: #767E9E;
+  width: 920px;
+  margin: 0;
+  padding-bottom: 60px; }
+
+.items-content__title {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 900;
+  color: #666D89; }
+
+.items-content__text {
+  font-size: 12px;
+  line-height: 22px;
+  font-weight: 400;
+  color: #767E9E; }
+
+.items-content__block {
+  width: 300px;
+  display: inline-block;
+  margin-bottom: 20px; }
+  .items-content__block:nth-child(3n-1) {
+    margin: 0 10px 0 10px; }
+  .items-content__block:last-child {
+    margin-bottom: 46px; }
+
+.items-content__img {
+  float: left; }
+
+.items-content__info {
+  margin-left: 80px; }
+
+.items-content__title {
+  margin-top: 0; }
 
 /*# sourceMappingURL=main.css.map */
