--- a/abstract/_constans.scss
+++ b/abstract/_constans.scss
@@ -1,4 +1,4 @@
-$width-content: 936px;
+$width-content: 1020px;
 $background-color1: #2D303A;
 $background-color2: #F06C64;
 $color-nav-text: #FFFFFF;
@@ -8,5 +8,6 @@ $color-title: #666D89;
 $color-text: #767E9E;
 $background-phone:#F2F2F2;
 $border-phone: #C7C7C7;
+$color-button: #BBBBBB;
 
  
