--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,6 @@
 @import "../components/header";
 @import "../components/slider";
 @import "../components/services";
+@import "../components/portfolio";
+@import "../components/footer";
 
