--- a/abstract/_mixins.scss
+++ b/abstract/_mixins.scss
@@ -3,3 +3,15 @@
     line-height: $height;
     font-weight: $weight;
 }
+
+@mixin table-768px {
+    @media (max-width: 768px) {
+        @content 
+    }
+}
+
+@mixin mobile-375px {
+    @media (max-width: 375px) {
+        @content 
+    }
+}
