--- a/components/_services.scss
+++ b/components/_services.scss
@@ -32,7 +32,7 @@
     display: inline-block;
     margin-bottom: 20px;
     &:nth-child(3n-1) {
-        margin: 0 10px 0 10px;
+        margin: 0 20px 0 20px;
     }
     &:last-child {
         margin-bottom: 46px;
@@ -49,4 +49,19 @@
 
 .items-content__title {
     margin-top: 0;
+}
+
+
+@include table-768px  {
+    .services__text {
+        width: 687px;
+    }
+
+    .items-content__block:nth-child(3n-1) {
+        margin: 0;
+    }
+
+    .items-content__block:nth-child(odd) {
+        margin-right: 53px;
+    }
 }
