--- a/components/_slider.scss
+++ b/components/_slider.scss
@@ -54,4 +54,24 @@
     box-shadow:  25px 25px  rgba(0, 0, 0, .1), 25px 25px rgba(0, 0, 0, .1), ;
 }
 
+@include table-768px  {
+    .wrapper {
+        max-width: 687px;
+    }
+    .vertical-img {
+        width: 162px;
+        height: 344px;
+    }
+
+    .vertical-img__image {
+        width: 141px;
+        height: 250px;
+    }
+
+    .slider__arrow {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
+
 
