--- a/css/main.css
+++ b/css/main.css
@@ -309,17 +309,23 @@ body {
   font-family: 'Lato', Verdana, sans-serif; }
 
 .wrapper {
-  max-width: 936px;
+  max-width: 1020px;
   margin: 0 auto; }
 
 .header_colored {
   background: #2D303A;
   border-bottom: #323746 6px solid; }
 
+.wrapper {
+  max-width: 940px; }
+
 .navigation {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+
+.navigation__burger {
+  display: none; }
 
 .logo {
   font-size: 25px;
@@ -345,6 +351,24 @@ body {
       color: #F06C64;
       transition: .4s; }
 
+@media (max-width: 768px) {
+  .header__navigation {
+    margin: 0 40px; }
+
+  .vertical-img {
+    width: 162px;
+    height: 344px; } }
+@media (max-width: 375px) {
+  .nav {
+    display: none; }
+
+  .navigation__burger {
+    display: block; }
+
+  .logo {
+    font-size: 19.69px;
+    line-height: 24px;
+    font-weight: 700; } }
 .slider {
   background: #F06C64; }
   .slider__content {
@@ -387,6 +411,21 @@ body {
 .horizontal-img_shadowed {
   box-shadow: 25px 25px rgba(0, 0, 0, 0.1), 25px 25px rgba(0, 0, 0, 0.1); }
 
+@media (max-width: 768px) {
+  .wrapper {
+    max-width: 687px; }
+
+  .vertical-img {
+    width: 162px;
+    height: 344px; }
+
+  .vertical-img__image {
+    width: 141px;
+    height: 250px; }
+
+  .slider__arrow {
+    margin-left: 30px;
+    margin-right: 30px; } }
 .services {
   background: #F2F2F2; }
 
@@ -424,7 +463,7 @@ body {
   display: inline-block;
   margin-bottom: 20px; }
   .items-content__block:nth-child(3n-1) {
-    margin: 0 10px 0 10px; }
+    margin: 0 20px 0 20px; }
   .items-content__block:last-child {
     margin-bottom: 46px; }
 
@@ -436,5 +475,78 @@ body {
 
 .items-content__title {
   margin-top: 0; }
+
+@media (max-width: 768px) {
+  .services__text {
+    width: 687px; }
+
+  .items-content__block:nth-child(3n-1) {
+    margin: 0; }
+
+  .items-content__block:nth-child(odd) {
+    margin-right: 53px; } }
+.portfolio {
+  background: #2D303A;
+  border-bottom: 6px solid #323746; }
+
+.portfolio__content-buttons {
+  margin-bottom: 18px; }
+
+.portfolio__title {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 900;
+  color: #666D89;
+  padding: 60px 0 14px;
+  margin: 0; }
+
+.portfolio__text {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 300;
+  color: #767E9E; }
+
+.content-buttons__btn {
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 400;
+  color: #767E9E;
+  background: #2D303A;
+  border: 2px solid #767E9E;
+  border-radius: 5px;
+  padding: 3px 5px;
+  margin-left: 10px; }
+  .content-buttons__btn:hover {
+    cursor: pointer;
+    border: 2px solid #BBBBBB;
+    color: #BBBBBB;
+    transition: .4s; }
+  .content-buttons__btn:first-child {
+    margin-left: 0; }
+
+.content-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.content-images__img {
+  margin-bottom: 20px; }
+
+@media (max-width: 768px) {
+  .portfolio__text {
+    width: 652px; } }
+.footer {
+  background: #2D303A; }
+
+.footer__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.footer__text {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 900;
+  color: #666D89; }
 
 /*# sourceMappingURL=main.css.map */
